--- a/categorys/index.html
+++ b/categorys/index.html
@@ -1,8 +1,8 @@
 ---
 ---
 layout: page
-title: Tags
-permalink: /tags/
+title: Categorys
+permalink: /categorys/
 ---
 
 {% if site.posts.size == 0 %}
@@ -11,7 +11,7 @@ permalink: /tags/
 
 <div class="tags">a
   <ul class="label">
-    {% for tag in site.category %}
+    {% for category in site.categorys %}
     <li>
       <a href="#{{ category[0] }}">
         <span>{{ category[0] }}</span>
@@ -21,7 +21,7 @@ permalink: /tags/
     {% endfor %}
   </ul>
 
-  {% for category in site.category %}
+  {% for category in site.categorys %}
     <h2 id="{{ category[0] }}">
       {{ category[0] }}
     </h2>
