--- a/categorys/index.html
+++ b/categorys/index.html
@@ -11,22 +11,22 @@ permalink: /categorys/
 
 <div class="tags">a
   <ul class="label">
-    {% for category in site.categorys %}
+    {% for tag in site.tags %}
     <li>
-      <a href="#{{ category[0] }}">
-        <span>{{ category[0] }}</span>
-        <span class="count">{{ category[1] | size }}</span>
+      <a href="#{{ tag[0] }}">
+        <span>{{ tag[0] }}</span>
+        <span class="count">{{ tag[1] | size }}</span>
       </a>
     </li>
     {% endfor %}
   </ul>
 
-  {% for category in site.categorys %}
-    <h2 id="{{ category[0] }}">
-      {{ category[0] }}
+  {% for tag in site.tags %}
+    <h2 id="{{ tag[0] }}">
+      {{ tag[0] }}
     </h2>
     <ul class="tag">
-      {% for post in category[1] %}
+      {% for post in tag[1] %}
         {% if post.title != null %}
           <li>
             {% if post.link %}
